--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - MONGODB_URI=${MONGODB_URI:-mongodb://user:password@mongo:27017/gestion-commandes}
+      - MONGODB_URI=${MONGODB_URI}
   mongo:
     image: mongo
     ports:
