Update docker-compose.yml to use a more secure environment variable for MongoDB URI.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     ports:
       - "5000:5000"
     environment:
-      - MONGODB_URI=${MONGODB_URI}
+      - MONGODB_URI=${MONGODB_URI:-mongodb://localhost:27017/defaultdb}
   mongo:
     image: mongo
     ports:
